# claude_autopilot

./: .bash_aliases  .dockerignore  .env.emulator  .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  .shell_integration  ALIASES.md  BEST_PRACTICES_IMPLEMENTATION_PROGRESS.md  DOCKER_README.md  Dockerfile  FIREBASE_EMULATOR_MIGRATION_PLAN.md  MOCK_TO_FIREBASE_EMULATOR_MIGRATION_REPORT.md  NEW_BEST_PRACTICES_SETUP_SUMMARY.md  README.md  README_MODULAR_SYSTEM.md  __init__.py  build-docker.sh  cc-wrapper.sh  ccfarm-agents.sh  ccfarm-stopremove.sh  claude_code_agent_farm.py  docker-attach.sh  docker-compose.yml  docker-entrypoint.sh  firebase.json  pyproject.toml  pytest.ini  requirements.txt  run-docker.sh  setup-docker-aliases.sh  setup.sh  setup_aliases.sh  view_agents.sh  view_agents.sh 
best_practices_guides/: ANGULAR_BEST_PRACTICES.md  ANSIBLE_DEVOPS_BEST_PRACTICES.md  BASH_AND_ZSH_SCRIPTING_FOR_UBUNTU.md  CLOUD_NATIVE_DEVOPS_BEST_PRACTICES.md  COSMOS_GOLANG_BLOCKCHAIN_BEST_PRACTICES.md  CPP_SYSTEMS_PROGRAMMING_BEST_PRACTICES.md  DATA_ENGINEERING_AND_ANALYTICS_BEST_PRACTICES.md  DATA_LAKES_KAFKA_SNOWFLAKE_SPARK_BEST_PRACTICES.md  DSPY_AND_PYTHON_LLM_PIPELINE_BEST_PRACTICES.md  EXCEL_AUTOMATION_WITH_PYTHON_AND_AZURE.md  FLUTTER_BEST_PRACTICES.md  GENAI_LLM_OPS_BEST_PRACTICES.md  GO_WEBAPPS_BEST_PRACTICES.md  HARDWARE_DEV_BEST_PRACTICES.md  HASHICORP_VAULT_POLICY_AS_CODE_BEST_PRACTICES.md  JAVA_ENTERPRISE_BEST_PRACTICES.md  KUBERNETES_AI_INFERENCE_BEST_PRACTICES.md  LARAVEL_BEST_PRACTICES.md  LLM_DEV_AND_TESTING_BEST_PRACTICES.md  LLM_EVALUATION_AND_OBSERVABILITY_BEST_PRACTICES.md  NEXTJS15_BEST_PRACTICES.md  PHP_BEST_PRACTICES.md  POLARS_DUCKDB_PYARROW_DATA_ENGINEERING_BEST_PRACTICES.md  POSTGRES17_AND_PYTHON_BEST_PRACTICES.md  PYTHON_FASTAPI_BEST_PRACTICES.md  REACT_NATIVE_BEST_PRACTICES.md  REMIX_ASTRO_BEST_PRACTICES.md  RUST_CLI_TOOLS_BEST_PRACTICES.md  RUST_SYSTEM_PROGRAMMING_BEST_PRACTICES.md  RUST_WEBAPPS_BEST_PRACTICES.md  SECURITY_ENGINEERING_BEST_PRACTICES.md  SERVERLESS_EDGE_BEST_PRACTICES.md  SOLANA_ANCHOR_RUST_BEST_PRACTICES.md  SVELTEKIT2_BEST_PRACTICES.md  TERRAFORM_WITH_AZURE_BEST_PRACTICES.md  UNREAL_ENGINE_5_BEST_PRACTICES.md
completion/: cffa_completion.bash
configs/: angular_config.json  ansible_config.json  bash_zsh_config.json  cloud_native_devops_config.json  cosmos_blockchain_config.json  cpp_systems_config.json  data_engineering_config.json  data_lakes_config.json  excel_automation_config.json  flutter_config.json  genai_llm_ops_config.json  go_webapps_config.json  hardware_dev_config.json  java_enterprise_config.json  kubernetes_ai_inference_config.json  laravel_config.json  llm_dev_testing_config.json  llm_eval_observability_config.json  nextjs_best_practices_config.json  nextjs_config.json  php_config.json  polars_duckdb_config.json  python_config.json  python_cooperating_agents_config.json  python_uv_config.json  react_native_config.json  remix_astro_config.json  rust_cli_config.json  rust_system_config.json  rust_webapps_config.json  sample.json  security_engineering_config.json  serverless_edge_config.json  solana_anchor_config.json  sveltekit2_config.json  terraform_azure_config.json  unreal_engine_config.json  vault_config.json
docker/: Dockerfile.single  README-single-agent.md  build-single.sh  docker-compose-single.yml  docker-compose.yml  docker-entrypoint-single.sh  run-single-agent.sh
docs/: BASH_ALIASES.md  agent-monitoring-improvements.md  flutter-mcp-setup.md
prompts/: continue_best_practices_prompt.txt  cooperating_agents_improvement_prompt_for_python_fastapi_postgres.txt  default_best_practices_prompt.txt  default_best_practices_prompt_angular.txt  default_best_practices_prompt_ansible.txt  default_best_practices_prompt_bash_zsh.txt  default_best_practices_prompt_cloud_native_devops.txt  default_best_practices_prompt_cosmos.txt  default_best_practices_prompt_cpp.txt  default_best_practices_prompt_data_engineering.txt  default_best_practices_prompt_data_lakes.txt  default_best_practices_prompt_excel.txt  default_best_practices_prompt_flutter.txt  default_best_practices_prompt_genai_llm_ops.txt  default_best_practices_prompt_go.txt  default_best_practices_prompt_hardware.txt  default_best_practices_prompt_java.txt  default_best_practices_prompt_kubernetes_ai.txt  default_best_practices_prompt_laravel.txt  default_best_practices_prompt_llm_dev_testing.txt  default_best_practices_prompt_llm_eval_observability.txt  default_best_practices_prompt_nextjs.txt  default_best_practices_prompt_php.txt  default_best_practices_prompt_polars.txt  default_best_practices_prompt_python.txt  default_best_practices_prompt_react_native.txt  default_best_practices_prompt_remix_astro.txt  default_best_practices_prompt_rust_cli.txt  default_best_practices_prompt_rust_system.txt  default_best_practices_prompt_rust_web.txt  default_best_practices_prompt_security.txt  default_best_practices_prompt_serverless_edge.txt  default_best_practices_prompt_solana.txt  default_best_practices_prompt_sveltekit.txt  default_best_practices_prompt_terraform_azure.txt  default_best_practices_prompt_unreal.txt  default_best_practices_prompt_vault.txt  default_bug_fixing_prompt_nextjs.txt  default_prompt.txt  default_prompt_nextjs.txt  (+1 more)
scripts/: carenji-task.sh  check-coverage.sh  check-mcp-health.sh  emulator-backup.sh  emulator-restore.sh  install-dependencies.sh  install_aliases.sh  run-agents-with-mcp.sh  run-carenji-tests.sh  setup_aliases.sh  start-carenji-dev.sh  start-emulators.sh  start-mcp-server.sh  test-mcp-integration.sh
seed-data/: README.md
test_project/: README.md
tests/: README.md  __init__.py  conftest.py  emulator-health-check.js  fixtures.py  mocks.py  test_config.py  test_utils.py
tool_setup_scripts/: README.md  common_utils.sh  llm_ops_pyproject.toml  setup.sh  setup_angular.sh  setup_ansible.sh  setup_bash_zsh.sh  setup_cloud_native_devops.sh  setup_cosmos_blockchain.sh  setup_cpp_systems.sh  setup_data_engineering.sh  setup_data_lakes.sh  setup_excel_automation.sh  setup_flutter.sh  setup_genai_llm_ops.sh  setup_go_webapps.sh  (+19 more)
(+67 files in other folders)
